# quant_algorithms_ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.pipeline  INTEGRATION_COMPLETE.md  Makefile  README.md  SETUP.md  pyproject.toml  railway.toml  render.yaml  requirements-pipeline.txt  requirements.txt
.claude/skills/add-ml-model/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml  daily-retrain.yml
Data/: charts.py  nvidia_llm.py  twitter_feed.py
Sentiment/: finbert.py
UI/: app.py
UI/templates/: index.html
ai/: llm_judge.py  llm_router.py  signal_narrator.py
ai_platform/: __init__.py  llm_judge.py  signal_narrator.py
algorithms/greeks/: prototype.py
algorithms/macd_rsi/: prototype.py
algorithms/machine_learning_algorithms/: orchestrator.py
backend/: app.py  backtest_runner.py  common.py  entrypoint.sh  llm_analyst.py  pipeline_store.py  predictor.py  requirements.txt  scenario_engine.py  services.py  stock_analyzer.py
backend/routes/: __init__.py  backtest.py  charts.py  market.py  news.py  pipeline.py  research.py  stock.py  trading.py
backend/templates/: index.html
data/: alpaca_news.py  alphavantage.py  charts.py  company_statistics.py  finnhub.py  nvidia_llm.py  twitter_feed.py
docs/: data-providers.md  performance.md  research-scripts.md
examples/: multi_language_demo.py
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
mlruns/0/: meta.yaml
models/volatility_models/: sabr_pricer.py
performance/: README.md
performance/cpp_execution/: CMakeLists.txt  README.md
performance/cpp_execution/bindings/: CMakeLists.txt  bindings.cpp
performance/cpp_execution/common/: utils.hpp
performance/cpp_execution/execution_engine/: CMakeLists.txt  execution_engine.cpp  execution_engine.hpp
performance/cpp_execution/order_book/: CMakeLists.txt  order_book.cpp  order_book.hpp
performance/go_services/: README.md  go.mod
quant_research/derivatives_volatility/: theory.tex
quant_research/greeks/: theory.tex
quant_research/market_microstructure/: theory.tex
quant_research/stochastic_volatility/: diagnostics.ipynb
scripts/: build_all.sh  build_cpp.sh  build_go.sh  daily_pipeline.sh  daily_predict.sh
sentiment/: finbert.py  finbert_canadian.py
tests/: conftest.py  run_all_tests.py  test_alphavantage.py  test_alphavantage_full.py  test_api_endpoints.py  test_evaluation_gate.py  test_finnhub.py  test_finnhub_full.py  test_pipeline_integration.py  test_targets.py  test_transforms.py
(+183 files in other folders)
